# django-lti

./: .gitignore  .gitlab-ci.yml  .python-version  CONTRIBUTING.md  LICENSE  README.md  docs-requirements.txt  manage.py  noxfile.py  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: docs.yml  packaging.yml  quality.yml
docs/: authentication.rst  conf.py  index.rst  installation.rst  key_management.rst  launch_handling.rst  oidc_initiation.rst  reference.rst  usage.rst
lti_tool/: admin.py  apps.py  constants.py  decorators.py  factories.py  middleware.py  models.py  types.py  utils.py  views.py
lti_tool/auth/: backends.py  middleware.py
lti_tool/lti_core/: constants.py  utils.py
lti_tool/management/commands/: rotate_keys.py
lti_tool/migrations/: 0001_initial.py  0002_create_lti_domain_models.py  0003_lticontext_memberships_url_ltimembership_is_active.py  0004_lticontext_can_access_results_and_more.py  0005_ltilineitem.py  0006_ltiregistration_audience.py  0007_lticontext_lti1p1_id_on_platform_and_more.py  0008_ltideployment_pns_url_and_more.py
lti_tool/services/: ags.py  nrps.py
tests/: settings.py  test_commands.py  test_models.py  test_utils.py  test_views.py
tests/lti_core/: test_utils.py
