[metadata]
name = django-lti
version = attr: lti_tool.__version__

[options]
python_requires = >=3.6
install_requires =
    django >= 3.2
    pylti1p3 >= 1.9
packages = find:
include_package_data = true
zip_safe = false

[options.packages.find]
exclude =
    example
    tests
    tests.*

[flake8]
max-line-length = 88
extend-ignore =
  E203,
exclude = env/*, venv/*, .nox, lti_tool/migrations/*
