[metadata]
name = django-lti
version = attr: lti_tool.__version__
description = LTI tool support for Django
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.umich.edu/academic-innovation/lti/django-lti
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.6
install_requires =
    django >= 3.2
    pylti1p3 >= 1.10
packages = find:
include_package_data = true
zip_safe = false

[options.packages.find]
exclude =
    example
    tests
    tests.*

[flake8]
max-line-length = 88
extend-ignore =
  E203,
exclude = build/*, env/*, venv/*, .nox, lti_tool/migrations/*
