[metadata]
name = django-lti
version = attr: lti_tool.__version__
description = LTI tool support for Django
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/academic-innovation/django-lti
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.6
install_requires =
    django >= 3.2
    pylti1p3 >= 1.10
packages = find:
include_package_data = true
zip_safe = false

[options.packages.find]
exclude =
    example
    tests
    tests.*

[flake8]
max-line-length = 88
docstring-convention=google
extend-ignore =
  E203,
  D100,  # Missing docstring in public module
  D101,  # Missing docstring in public class
  D102,  # Missing docstring in public method
  D103,  # Missing docstring in public function
  D104,  # Missing docstring in public package
  D105,  # Missing docstring in magic method
  D106,  # Missing docstring in public nested class
  D107,  # Missing docstring in __init__
exclude = build/*, env/*, venv/*, .nox, lti_tool/migrations/*
